[package]
name = "power-monitor"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads1x1x = "0.2"
embedded-hal = "0.2"
linux-embedded-hal = "0.2"
nb = "0.1"
reqwest = "0.9"
serde = "1.0"
chrono = { version = "0.4", features = ["serde"]}
